k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: plugin-market-data
  labels:
    app.kubernetes.io/part-of: bifrost
    app.kubernetes.io/component: market-data
